SERVER-4614: prohibit read-only users from restoring data via mongorestore